--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "npm run test-js && npm run check",
     "test-js": "./node_modules/.bin/ava",
     "check": "./node_modules/.bin/eslint app/",
-    "tdd": "npm run test-js --watch"
+    "tdd": "npm run test-js -- --watch"
   },
   "author": "Brendan Studds",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
@@ -23,8 +24,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
+    "react-addons-test-utils": "^15.4.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
