--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-eslint": "^7.1.1",
+    "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
