Test framework doing things better

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "!./src/**/*.spec.js"
     ],
     "require": [
-      "babel-register"
+      "babel-register",
+      "./test/setup.js"
     ],
     "babel": "inherit"
   }
