--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^6.9.0",
     "react-test-renderer": "^15.5.4",
     "react-test-utils": "0.0.1",
+    "sinon": "^4.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
