--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "babel-eslint": "^7.1.1",
     "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "xwing-miniatures-font": "^1.0.25"
   },
   "devDependencies": {
     "ava": "^0.18.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
     "enzyme": "^2.8.2",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
+    "file-loader": "^1.1.5",
     "react-test-renderer": "^15.5.4",
     "react-test-utils": "0.0.1",
     "sinon": "^4.0.1",
